# rustcrab

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  rust-handbook-testimonials.md  tailwind.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  config.yaml  documentation.md  feature.md  other.md
.github/workflows/: build.yml  codeql.yml  issue-labeler.yml  pull-request.yml  realease-and-changelog.yml  stale.yml
book-compendium/chapter-1/: calculator.rs  characters.rs  control_flow_1.rs  floats.rs  functions.rs.rs  hello_world.rs  integers.rs  shadowing.rs  web_server.rs
book-compendium/chapter-10/: 02_assertion_macros.rs  03_reference_counting.rs  03_testing_results_and_options.rs  04_atomic_reference_counting.rs  05_interior_mutability.rs  06_mutex_concurrency.rs  07_integration_tests.rs  09_box_option_interaction.rs  10_controlling_doc_tests.rs  11_smart_pointer_ownership.rs  12_rc_graph_dag.rs  12_tdd_green_phase.rs  14_tdd_api_handler.rs
book-compendium/chapter-11/: 01_basic_read_write copy.rs  01_box_basic.rs  02_recursive_box.rs  04_write_file.rs  07_rwlock_concurrency.rs  10_rc_refcell_combination.rs  11_buffer_reuse.rs  12_process_large_file.rs  13_simple_http_server.rs
book-compendium/chapter-12/: 03_read_lines.rs  05_append_to_file.rs  05_rwlock_cache.rs  06_channel_basics.rs  07_tcp_echo_server.rs  08_tcp_client.rs  09_bidirectional_channel.rs  09_tcp_connect_timeout.rs  12_mutex_lock_duration.rs
book-compendium/chapter-13/: 01_spawn_thread.rs  07_channel_iteration.rs  10_async_basics.rs  11_tokio_basics.rs  13_01_hello_web.rs  13_02_routing_basics.rs  13_03_shared_state.rs  13_04_path_extractor.rs  13_05_query_params.rs  13_06_json_extractor.rs  13_07_restful_api_full.rs  13_08_database_pool.rs  13_09_models_with_sqlx.rs  13_10_shared_pool.rs  13_11_db_handlers.rs  13_12_final_db_app.rs  13_13_final_backend_with_cors.rs  13_14_wasm_api_client.rs  13_15_wasm_client_lib.rs  index.html  main.rs
book-compendium/chapter-14/: 01_zero_cost_abstraction.rs  02_stack_vs_heap.rs  04_unsafe_function.rs  05_cli_args.rs  06_clap_args.rs  08_list_dir_contents.rs  09_build.rs  10_c_callbacks.rs  12_safe_ffi_wrapper.rs  13_ffi_c_lib.rs  14_04_path_extractor.rs  14_05_query_params.rs  14_07_restful_api_full.rs  14_08_database_pool.rs  14_09_models_with_sqlx.rs  14_11_db_handlers.rs  14_12_final_db_app.rs  14_13_final_backend_with_cors.rs  14_14_wasm_api_client.rs  14_15_wasm_client_lib.rs  handlers.rs  models.rs
book-compendium/chapter-14/14_13_final_backend_with_cors/: Cargo.toml
book-compendium/chapter-15/: 03_raw_pointers.rs  11_c_struct_layout.rs  11_no_std_kernel.rs  15_01_dockerfile-single-stage  15_02_multistage_build  15_03_optimized_layer_caching  15_04_docker_compose_structure  15_05_compose_networking  15_06_docker_compose_env_vars  15_07_compose_persistence  15_08_compose_bind_mount  15_09_full_compose_example
book-compendium/chapter-16/: 16_01_dockerfile-single-stage  16_01_double_ownership.rs  16_02_dangling_references.rs  16_02_multistage_build  16_03_borrowing_confusion.rs  16_03_optimized_layer_caching  16_04_dangling_references_scope.rs  16_04_docker_compose_structure  16_05_compose_networking  16_05_lifetime_specifiers.rs  16_06_docker_compose_env_vars  16_06_mutable_vs_immutable_lifetimes.rs  16_07_compose_persistence  16_07_simultaneous_references.rs  16_08_compose_bind_mount  16_08_multiple_mutable_references.rs  16_09_full_compose_example  16_09_scope_confusion.rs  16_10_overusing_panic.rs  16_11_ignoring_result.rs  16_12_unwrapping_without_care.rs  16_13_overusing_unwrap.rs  16_14_uninformative_expect.rs  16_15_not_using_combinators.rs  16_16_using_map.rs  16_17_using_unwrap_or_else.rs  16_18_data_races.rs  16_19_deadlocks.rs  16_20_atomic_memory_ordering.rs  16_21_inefficient_scheduling.rs  16_22_inefficient_memory.rs  16_23_excessive_dynamic_dispatch.rs  16_24_unoptimized_data_structures.rs  16_25_excessive_cloning.rs  16_26_suboptimal_iteration.rs  16_27_mismatched_types.rs  16_28_mismatched_return_types.rs  16_29_unresolved_imports.rs  16_30_unused_variables.rs  16_31_unclear_error_messages.rs  (+10 more)
book-compendium/chapter-17/: 17_01_double_ownership.rs  17_03_borrowing_confusion.rs  17_04_dangling_references_scope.rs  17_05_lifetime_specifiers.rs  17_06_mutable_vs_immutable_lifetimes.rs  17_07_simultaneous_references.rs  17_08_multiple_mutable_references.rs  17_09_scope_confusion.rs  17_11_ignoring_result.rs  17_12_unwrapping_without_care.rs  17_13_overusing_unwrap.rs  17_14_uninformative_expect.rs  17_17_using_unwrap_or_else.rs  17_18_data_races.rs  17_19_deadlocks.rs  17_21_inefficient_scheduling.rs  17_27_mismatched_types.rs  17_28_mismatched_return_types.rs  17_30_unused_variables.rs  17_33_ineffective_logging.rs  17_35_stable_network.rs  17_36_debugging_concurrency.rs  17_37_ownership_model.rs  17_38_type_system.rs  17_39_idiomatic_rust.rs  17_40_optimize_performance.rs
book-compendium/chapter-2/: String.rs  booleans.rs  combining_patterns.rs  enums.rs  enums_methods_1.rs  error_destructuring.rs  for_nested.rs  functions_passing_by_reference.rs  functions_return_values.rs  if_else.rs  immutable_variables.rs  match_guards.rs  mutable_variables.rs  ownership_and_functions.rs  panic_macro.rs  result_type.rs  string-literal.rs  structs.rs  structs_associated_functions.rs  tuple_structs.rs  tuples.rs  unwrap_or.rs  while.rs
book-compendium/chapter-3/: closures_2.rs  closures_3.rs  function_documented.rs  functions_immutable_borrowing.rs  functions_mutable_borrowing.rs  high-order_functions.rs
book-compendium/chapter-4/: borrowing_functions_2.rs  borrowing_read_only_access.rs  clone_trait.rs  copy_trait.rs  moving_ownership.rs  moving_ownership_2.rs  mutable_borrowing.rs  ownership_1.rs  ownership_cleaning_up.rs  ownership_key_rules.rs  pitfall_1.rs  (+1 more)
scripts/: check-all-rust.sh  run-rust-example.sh  test-rust-example.sh
src/: global.d.ts
(+533 files in other folders)
