[workspace]
resolver = "2"
default-members = [
  "book-compendium/chapter-1/hello_world",
  "book-compendium/chapter-1/cli_calculator",
  "book-compendium/chapter-2/arrays",
]
members = [
  "book-compendium/chapter-10/01_basic_unit_tests",
  "book-compendium/chapter-10/02_assertion_macros",
  "book-compendium/chapter-10/03_testing_results_and_options",
  "book-compendium/chapter-10/04_testing_panics",
  "book-compendium/chapter-10/05_ignoring_tests",
  "book-compendium/chapter-10/06_library_structure",
  "book-compendium/chapter-10/07_integration_tests",
  "book-compendium/chapter-10/08_test_helpers",
  "book-compendium/chapter-10/09_documentation_tests",
  "book-compendium/chapter-10/10_controlling_doc_tests",
  "book-compendium/chapter-10/11_test_driven_development",
  "book-compendium/chapter-10/12_tdd_green_phase",
  "book-compendium/chapter-10/13_tdd_refactor_phase",
  "book-compendium/chapter-10/14_tdd_api_handler",
  "book-compendium/chapter-10/15_test_doubles_and_stubs",
  "book-compendium/chapter-11/01_box_basic",
  "book-compendium/chapter-11/02_recursive_box",
  "book-compendium/chapter-11/03_reference_counting",
  "book-compendium/chapter-11/04_atomic_reference_counting",
  "book-compendium/chapter-11/05_interior_mutability",
  "book-compendium/chapter-11/06_mutex_concurrency",
  "book-compendium/chapter-11/07_rwlock_concurrency",
  "book-compendium/chapter-11/08_deref_coercion",
  "book-compendium/chapter-11/09_box_option_interaction",
  "book-compendium/chapter-11/10_rc_refcell_combination",
  "book-compendium/chapter-11/11_smart_pointer_ownership",
  "book-compendium/chapter-11/12_rc_graph_dag",
  "book-compendium/chapter-12/01_basic_read_write copy",
  "book-compendium/chapter-12/02_safe_write",
  "book-compendium/chapter-12/03_read_lines",
  "book-compendium/chapter-12/04_write_file",
  "book-compendium/chapter-12/05_append_to_file",
  "book-compendium/chapter-12/06_fs_operations",
  "book-compendium/chapter-12/07_tcp_echo_server",
  "book-compendium/chapter-12/08_tcp_client",
  "book-compendium/chapter-12/09_tcp_connect_timeout",
  "book-compendium/chapter-12/10_tls_client",
  "book-compendium/chapter-12/11_buffer_reuse",
  "book-compendium/chapter-12/12_process_large_file",
  "book-compendium/chapter-12/13_simple_http_server",
  "book-compendium/chapter-12/14_file_stats",
  "book-compendium/chapter-13/01_spawn_thread",
  "book-compendium/chapter-13/02_thread_result",
  "book-compendium/chapter-13/03_arc_sharing",
  "book-compendium/chapter-13/04_mutex_counter",
  "book-compendium/chapter-13/05_rwlock_cache",
  "book-compendium/chapter-13/06_channel_basics",
  "book-compendium/chapter-13/07_channel_iteration",
  "book-compendium/chapter-13/08_multiple_producers",
  "book-compendium/chapter-13/09_bidirectional_channel",
  "book-compendium/chapter-13/10_async_basics",
  "book-compendium/chapter-13/11_tokio_basics",
  "book-compendium/chapter-13/12_mutex_lock_duration",
  "book-compendium/chapter-14/14_01_hello_web",
  "book-compendium/chapter-14/14_02_routing_basics",
  "book-compendium/chapter-14/14_03_shared_state",
  "book-compendium/chapter-14/14_04_path_extractor",
  "book-compendium/chapter-14/14_05_query_params",
  "book-compendium/chapter-14/14_06_json_extractor",
  "book-compendium/chapter-14/14_07_restful_api_full",
  "book-compendium/chapter-14/14_08_database_pool",
  "book-compendium/chapter-14/14_10_shared_pool",
  "book-compendium/chapter-14/14_12_final_db_app",
  "book-compendium/chapter-14/14_13_final_backend_with_cors",
  "book-compendium/chapter-14/main",
  "book-compendium/chapter-15/01_zero_cost_abstraction",
  "book-compendium/chapter-15/02_stack_vs_heap",
  "book-compendium/chapter-15/03_raw_pointers",
  "book-compendium/chapter-15/04_unsafe_function",
  "book-compendium/chapter-15/05_cli_args",
  "book-compendium/chapter-15/06_clap_args",
  "book-compendium/chapter-15/07_read_file_lines",
  "book-compendium/chapter-15/08_list_dir_contents",
  "book-compendium/chapter-15/09_build",
  "book-compendium/chapter-15/10_c_callbacks",
  "book-compendium/chapter-15/11_c_struct_layout",
  "book-compendium/chapter-15/12_safe_ffi_wrapper",
  "book-compendium/chapter-15/13_ffi_c_lib",
  "book-compendium/chapter-15/handling_standard_input",
  "book-compendium/chapter-17/17_01_double_ownership",
  "book-compendium/chapter-17/17_02_dangling_references",
  "book-compendium/chapter-17/17_03_borrowing_confusion",
  "book-compendium/chapter-17/17_04_dangling_references_scope",
  "book-compendium/chapter-17/17_05_lifetime_specifiers",
  "book-compendium/chapter-17/17_06_mutable_vs_immutable_lifetimes",
  "book-compendium/chapter-17/17_07_simultaneous_references",
  "book-compendium/chapter-17/17_08_multiple_mutable_references",
  "book-compendium/chapter-17/17_09_scope_confusion",
  "book-compendium/chapter-17/17_10_overusing_panic",
  "book-compendium/chapter-17/17_11_ignoring_result",
  "book-compendium/chapter-17/17_12_unwrapping_without_care",
  "book-compendium/chapter-17/17_13_overusing_unwrap",
  "book-compendium/chapter-17/17_14_uninformative_expect",
  "book-compendium/chapter-17/17_15_not_using_combinators",
  "book-compendium/chapter-17/17_16_using_map",
  "book-compendium/chapter-17/17_17_using_unwrap_or_else",
  "book-compendium/chapter-17/17_18_data_races",
  "book-compendium/chapter-17/17_19_deadlocks",
  "book-compendium/chapter-17/17_20_atomic_memory_ordering",
  "book-compendium/chapter-17/17_21_inefficient_scheduling",
  "book-compendium/chapter-17/17_22_inefficient_memory",
  "book-compendium/chapter-17/17_23_excessive_dynamic_dispatch",
  "book-compendium/chapter-17/17_24_unoptimized_data_structures",
  "book-compendium/chapter-17/17_25_excessive_cloning",
  "book-compendium/chapter-17/17_26_suboptimal_iteration",
  "book-compendium/chapter-17/17_27_mismatched_types",
  "book-compendium/chapter-17/17_28_mismatched_return_types",
  "book-compendium/chapter-17/17_29_unresolved_imports",
  "book-compendium/chapter-17/17_30_unused_variables",
  "book-compendium/chapter-17/17_31_unclear_error_messages",
  "book-compendium/chapter-17/17_32_complex_lifetime_errors",
  "book-compendium/chapter-17/17_33_ineffective_logging",
  "book-compendium/chapter-17/17_34_test_coverage_gaps",
  "book-compendium/chapter-17/17_36_debugging_concurrency",
  "book-compendium/chapter-17/17_37_ownership_model",
  "book-compendium/chapter-17/17_38_type_system",
  "book-compendium/chapter-17/17_39_idiomatic_rust",
  "book-compendium/chapter-17/17_40_optimize_performance",
  "book-compendium/chapter-17/17_41_leverage_ecosystem",
  "book-compendium/chapter-1/booleans",
  "book-compendium/chapter-1/characters",
  "book-compendium/chapter-1/cli_calculator",
  "book-compendium/chapter-1/constants",
  "book-compendium/chapter-1/control_flow_1",
  "book-compendium/chapter-1/control_flow_2",
  "book-compendium/chapter-1/control_flow_3",
  "book-compendium/chapter-1/developer_mood",
  "book-compendium/chapter-1/floats",
  "book-compendium/chapter-1/functions.rs",
  "book-compendium/chapter-1/hello_world",
  "book-compendium/chapter-1/immutable_variables",
  "book-compendium/chapter-1/integers",
  "book-compendium/chapter-1/mutable_variables",
  "book-compendium/chapter-1/shadowing",
  "book-compendium/chapter-1/web_server",
  "book-compendium/chapter-1/why_learn_rust",
  "book-compendium/chapter-2/arrays",
  "book-compendium/chapter-2/booleans",
  "book-compendium/chapter-2/characters",
  "book-compendium/chapter-2/combining_patterns",
  "book-compendium/chapter-2/destructuring_enums",
  "book-compendium/chapter-2/enums",
  "book-compendium/chapter-2/enums_match",
  "book-compendium/chapter-2/enums_methods_1",
  "book-compendium/chapter-2/enums_methods_2",
  "book-compendium/chapter-2/error_handling_1",
  "book-compendium/chapter-2/floating-point_numbers",
  "book-compendium/chapter-2/for_1",
  "book-compendium/chapter-2/for_nested",
  "book-compendium/chapter-2/for_range",
  "book-compendium/chapter-2/function_passing_by_value",
  "book-compendium/chapter-2/functions_clone",
  "book-compendium/chapter-2/functions_passing_by_mutable_reference",
  "book-compendium/chapter-2/functions_passing_by_reference",
  "book-compendium/chapter-2/functions_return_values",
  "book-compendium/chapter-2/functions_syntax",
  "book-compendium/chapter-2/if_else",
  "book-compendium/chapter-2/immutable_variables",
  "book-compendium/chapter-2/integers",
  "book-compendium/chapter-2/loop_1",
  "book-compendium/chapter-2/loops_2",
  "book-compendium/chapter-2/match_guards",
  "book-compendium/chapter-2/matching_literals",
  "book-compendium/chapter-2/matching_ranges",
  "book-compendium/chapter-2/matching_with_variables",
  "book-compendium/chapter-2/mutable_variables",
  "book-compendium/chapter-2/option",
  "book-compendium/chapter-2/option_type",
  "book-compendium/chapter-2/ownership_and_functions",
  "book-compendium/chapter-2/panic_macro",
  "book-compendium/chapter-2/result_type",
  "book-compendium/chapter-2/shadowing",
  "book-compendium/chapter-2/slices",
  "book-compendium/chapter-2/String",
  "book-compendium/chapter-2/string-literal",
  "book-compendium/chapter-2/structs",
  "book-compendium/chapter-2/structs_associated_functions",
  "book-compendium/chapter-2/structs_initialization",
  "book-compendium/chapter-2/structs_methods",
  "book-compendium/chapter-2/tuples",
  "book-compendium/chapter-2/tuples2",
  "book-compendium/chapter-2/tuple_structs",
  "book-compendium/chapter-2/unit_structs",
  "book-compendium/chapter-2/unwrap_or",
  "book-compendium/chapter-2/while",
  "book-compendium/chapter-3/anonymous_functions",
  "book-compendium/chapter-3/basic_function_syntax",
  "book-compendium/chapter-3/closures_1",
  "book-compendium/chapter-3/closures_2",
  "book-compendium/chapter-3/closures_3",
  "book-compendium/chapter-3/function_documented",
  "book-compendium/chapter-3/functions_immutable_borrowing",
  "book-compendium/chapter-3/functions_mutable_borrowing",
  "book-compendium/chapter-3/functions_no_return_value",
  "book-compendium/chapter-3/functions_ownership",
  "book-compendium/chapter-3/functons_no_parameters_no_return_value",
  "book-compendium/chapter-3/high-order_functions",
  "book-compendium/chapter-3/parameters_and_return_values",
  "book-compendium/chapter-3/returning_values_and_ownership",
  "book-compendium/chapter-4/borrowing_functions_1",
  "book-compendium/chapter-4/borrowing_functions_2",
  "book-compendium/chapter-4/borrowing_read_only_access",
  "book-compendium/chapter-4/borrowing_rules",
  "book-compendium/chapter-4/clone_trait",
  "book-compendium/chapter-4/copy_trait",
  "book-compendium/chapter-4/immutable_borrowing",
  "book-compendium/chapter-4/lifetime_error",
  "book-compendium/chapter-4/managing_library",
  "book-compendium/chapter-4/move_ownership",
  "book-compendium/chapter-4/moving_in_function_calls",
  "book-compendium/chapter-4/moving_ownership",
  "book-compendium/chapter-4/moving_ownership_2",
  "book-compendium/chapter-4/mutable_borrowing",
  "book-compendium/chapter-4/mutable_borrowing_function",
  "book-compendium/chapter-4/ownership_1",
  "book-compendium/chapter-4/ownership_cleaning_up",
  "book-compendium/chapter-4/ownership_key_rules",
  "book-compendium/chapter-4/ownership_transfer_function_calls",
  "book-compendium/chapter-4/pitfall_1",
  "book-compendium/chapter-4/pitfall_2",
  "book-compendium/chapter-4/returning_ownership",
  "book-compendium/chapter-4/returning_reference",
  "book-compendium/chapter-4/test copy",
  "book-compendium/chapter-4/test copy 13",
  "book-compendium/chapter-4/test copy 14",
  "book-compendium/chapter-4/test copy 15",
  "book-compendium/chapter-4/test copy 4",
  "book-compendium/chapter-5/borrowing_struct_fields",
  "book-compendium/chapter-5/customizing_debug_input",
  "book-compendium/chapter-5/debugging_with_structs",
  "book-compendium/chapter-5/defining_struct_with_enum_fields",
  "book-compendium/chapter-5/enum_methods",
  "book-compendium/chapter-5/enums_first_example",
  "book-compendium/chapter-5/enum_variants",
  "book-compendium/chapter-5/final_example_1",
  "book-compendium/chapter-5/ownership_struct_fields",
  "book-compendium/chapter-5/structs_accessing_fields",
  "book-compendium/chapter-5/structs_associated_functions",
  "book-compendium/chapter-5/structs_cloning",
  "book-compendium/chapter-5/structs_field_initialization",
  "book-compendium/chapter-5/structs_fields_modiy_update",
  "book-compendium/chapter-5/structs_final example",
  "book-compendium/chapter-5/structs_initialization",
  "book-compendium/chapter-5/structs_methods",
  "book-compendium/chapter-5/structs_unit-like",
  "book-compendium/chapter-5/structs_unit-like2",
  "book-compendium/chapter-5/structs_update_instances",
  "book-compendium/chapter-5/tuple_destructuring",
  "book-compendium/chapter-5/tuples_employee_example",
  "book-compendium/chapter-5/tuples_example_1",
  "book-compendium/chapter-5/tuples_example_points",
  "book-compendium/chapter-5/tuples_returning_multiple_values",
  "book-compendium/chapter-5/tuples_splitting_full_name",
  "book-compendium/chapter-5/tuple_structs",
  "book-compendium/chapter-5/tuple_structs_and_functions",
  "book-compendium/chapter-6/anyhow_example",
  "book-compendium/chapter-6/combinators",
  "book-compendium/chapter-6/custom_errors_functions",
  "book-compendium/chapter-6/custom_error_types_with_enum",
  "book-compendium/chapter-6/env_logger_example",
  "book-compendium/chapter-6/env_logger_with_context",
  "book-compendium/chapter-6/errors_final_example",
  "book-compendium/chapter-6/expect",
  "book-compendium/chapter-6/implementing_standard_error_traits",
  "book-compendium/chapter-6/manual_propagation",
  "book-compendium/chapter-6/option_example_1",
  "book-compendium/chapter-6/panic_example",
  "book-compendium/chapter-6/question_mark_operator",
  "book-compendium/chapter-6/question_mark_operator_with_option",
  "book-compendium/chapter-6/result_example_1",
  "book-compendium/chapter-6/safe_unwrapping",
  "book-compendium/chapter-6/thiserror_example",
  "book-compendium/chapter-6/unwrap",
  "book-compendium/chapter-7/01_defining_traits",
  "book-compendium/chapter-7/02_default_implementations",
  "book-compendium/chapter-7/03_implementing_on_custom_types",
  "book-compendium/chapter-7/04_orphan_rule",
  "book-compendium/chapter-7/05_trait_objects",
  "book-compendium/chapter-7/06_duplication_problem",
  "book-compendium/chapter-7/07_generics_syntax_error",
  "book-compendium/chapter-7/08_generics_trait_bounds",
  "book-compendium/chapter-7/09_where_clauses",
  "book-compendium/chapter-7/10_returning_impl_trait",
  "book-compendium/chapter-7/11_dangling_reference",
  "book-compendium/chapter-7/12_borrow_checker_scopes",
  "book-compendium/chapter-7/13_lifetime_syntax",
  "book-compendium/chapter-7/14_annotating_functions",
  "book-compendium/chapter-7/15_structs_with_references",
  "book-compendium/chapter-7/16_impl_blocks_with_lifetimes",
  "book-compendium/chapter-7/17_lifetime_elision",
  "book-compendium/chapter-7/18_static_lifetime",
  "book-compendium/chapter-7/20_zero_copy_parser",
  "book-compendium/chapter-7/21_validating_references_impl",
  "book-compendium/chapter-8/01_averaged_collection",
  "book-compendium/chapter-8/02_trait_summarizable",
  "book-compendium/chapter-8/03_impl_trait_notify",
  "book-compendium/chapter-8/04_trait_bounds_generics",
  "book-compendium/chapter-8/05_monomorphization",
  "book-compendium/chapter-8/06_trait_objects",
  "book-compendium/chapter-8/07_object_safety",
  "book-compendium/chapter-8/08_default_methods",
  "book-compendium/chapter-8/09_supertraits",
  "book-compendium/chapter-8/10_multiple_trait_bounds",
  "book-compendium/chapter-8/11_associated_types",
  "book-compendium/chapter-8/12_builder_pattern",
  "book-compendium/chapter-8/13_state_pattern_enum",
  "book-compendium/chapter-8/14_observer_pattern",
  "book-compendium/chapter-9/01_manual_iteration",
  "book-compendium/chapter-9/02_three_types_of_iterators",
  "book-compendium/chapter-9/03_iterator_consumers",
  "book-compendium/chapter-9/04_map_iterator_adapter",
  "book-compendium/chapter-9/05_filter_and_chaining",
  "book-compendium/chapter-9/06_fold_and_find_consumers",
  "book-compendium/chapter-9/07_basic_closures",
  "book-compendium/chapter-9/08_closure_capture_modes",
  "book-compendium/chapter-9/09_closure_trait_bounds",
  "book-compendium/chapter-9/10_match_destructuring",
  "book-compendium/chapter-9/11_if_let_and_while_let",
]
